--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,367 @@
-header{
-    background-color: #88bb66;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: #77aa66, solid;
-    padding-left: 10px;
-    padding-right: 20px;  
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
 
 body{
-    background-color: gainsboro;
+    background-color: #543c52;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
 }
 
-td{
-  margin: 20px;
-  text-align: justify;
+.main-container{
+    display: grid;
+    height: 100%;
 }
 
-table{
-    background-color: honeydew;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin: 5%;
-    border: gray;
+.nav{
+    display: flex;
+    background-color: #361d32;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+}
+
+.content{
+    margin: 0, auto;
+}
+
+.main{
+    display: flex;
+    justify-content: center;
+}
+
+.footer-h{
+    background-color: #361d32;
+    padding-top: 2%;
+    padding-bottom: 1.5%;
+    min-height: 8vh;
+    color: #edd2cb;
+    font-family: 'Montserrat Alternates', sans-serif;
+    justify-content: space-around;
+}
+
+li{
+    list-style: none;
+}
+
+.logo{
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: #edd2cb;
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
+
+.nav-links{
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav-links li{
+  margin-left: 2em;
+}
+
+.burger{
+    margin-top: 1%;
+    margin-bottom: auto;
+}
+
+.nav-links a{
+    text-decoration: none;
+    color: #edd2cb;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: bold;
+}
+
+.category-menu{
+    background-color: #644d62;
+    width: 15%;
+    padding-top: 2em;
+}
+
+.category-links{
+    margin-top: 1em;
+    margin-left: 2em;
+}
+
+.category-links a{
+    text-decoration: none;
+    color: #f1e8e6;
+    font-size: 1.5em;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.category-links li{
+    padding-bottom: 2em;
+}
+
+
+.post-block{
+    background-color: #644d62;
+    width: 70%;
+}
+
+.line{
+    display:flex;
+    justify-content: space-around;
+}
+
+.profile-content{
+  display: grid;
+  font-family: 'Poppins', sans-serif;
+  height: 100%;
+  width: 100%;
+  padding: 5%;
+  padding-bottom: 15%;
+  place-items: center;
+  background: -webkit-linear-gradient(left, #a445b2, #644d62);
+}
+::selection{
+  background: #644d62;
+  color: #fff;
+}
+.profile-field{
+  overflow: hidden;
+  max-width: 390px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+}
+.profile-field .title-text{
+  display: flex;
+  width: 200%;
+}
+.profile-field .title{
+  width: 50%;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+.profile-field .slide-controls{
+  position: relative;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  overflow: hidden;
+  margin: 30px 0 10px 0;
+  justify-content: space-between;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+}
+.slide-controls .slide{
+  height: 100%;
+  width: 100%;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 48px;
+  cursor: pointer;
+  z-index: 1;
+  transition: all 0.6s ease;
+}
+.slide-controls label.signup{
+  color: #000;
+}
+.slide-controls .slider-tab{
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  left: 0;
+  z-index: 0;
+  border-radius: 5px;
+  background: -webkit-linear-gradient(left, #a445b2, #644d62);
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+input[type="radio"]{
+  display: none;
+}
+#signup:checked ~ .slider-tab{
+  left: 50%;
+}
+#signup:checked ~ label.signup{
+  color: #fff;
+  cursor: default;
+  user-select: none;
+}
+#signup:checked ~ label.login{
+  color: #000;
+}
+#login:checked ~ label.signup{
+  color: #000;
+}
+#login:checked ~ label.login{
+  cursor: default;
+  user-select: none;
+}
+.profile-field .form-container{
+  width: 100%;
+  overflow: hidden;
+}
+.form-container .form-inner{
+  display: flex;
+  width: 200%;
+}
+.form-container .form-inner form{
+  width: 50%;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+.form-inner form .field{
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
+}
+.form-inner form .field input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 15px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  border-bottom-width: 2px;
+  font-size: 17px;
+  transition: all 0.3s ease;
+}
+.form-inner form .field input:focus{
+  border-color: #644d62;
+  box-shadow: inset 0 0 3px #614a6e;
+}
+.form-inner form .field input::placeholder{
+  color: #999;
+  transition: all 0.3s ease;
+}
+form .field input:focus::placeholder{
+  color: #b3b3b3;
+}
+.form-inner form .pass-link{
+  margin-top: 5px;
+}
+.form-inner form .signup-link{
+  text-align: center;
+  margin-top: 30px;
+}
+.form-inner form .pass-link a,
+.form-inner form .signup-link a{
+  color: #644d62;
+  text-decoration: none;
+}
+.form-inner form .pass-link a:hover,
+.form-inner form .signup-link a:hover{
+  text-decoration: underline;
+}
+form .btn{
+  height: 50px;
+  width: 100%;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+form .btn .btn-layer{
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: -webkit-linear-gradient(right, #a445b2, #644d62, #a445b2, #644d62);
+  border-radius: 5px;
+  transition: all 0.4s ease;;
+}
+form .btn:hover .btn-layer{
+  left: 0;
+}
+form .btn input[type="submit"]{
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  padding-left: 0;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.post{
+    width: 30%;
+    border-radius: 10px;   
+    color: #f1e8e6;
+    background-color: #361d32;
+    margin: 1%;
+    padding: 2%;
+}
+
+.post-text{
+  margin-top: 0.5em;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.post img{
+    width: 130px;
+    height: 130px;
+}
+
+.post .img{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1em;
+}
+
+.block-name{
+    color: #f1e8e6;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
     border-radius: 5px;
+    width: 100%;
+    font-size: 2em;
+    margin: 2%;
+}
+
+.title-price{
+    font-size: 2em;
+    font-family: 'Montserrat Alternates', sans-serif;
+    color: #f1e8e6;
+}
+
+.price{
+    display: flex;
+    letter-spacing: 2px;
+    color: #e28585;
+}
+
+.price span{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: 2px;
+    font-size: 20px;
+}
+
+.title-price span{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+}
+
+.footer-h a{
+    text-decoration: none;
+    color: #edd2cb;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
+
+.footer-h div{
+    padding-top: 10px;
+    justify-content: space-around;
+    display: flex;
 }
