--- a/templates/category.html
+++ b/templates/category.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meow-itel</title>
+    <title>Meow-itel category page</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div class="main-container">
         <div class="header">
             <nav class="nav">
-                <div class="logo">
-                    <h1>Meow-itel</h1>
-                </div>
+                <a href="index.html">
+                    <div class="logo">
+                        <h1>Meow-itel</h1>
+                    </div>
+                </a>
                 <div>
                     <ul class="nav-links">
                         <li class="add">
@@ -68,7 +70,7 @@
                 <div class="post-block">
                     <div class="line">
                         <div class="block-name">
-                            New posts:
+                            Electronics:
                         </div>
                     </div>
                     <div class="line">
@@ -122,7 +124,7 @@
                                     <p>Prodám plně funkční Canon 400D + příslušenství. 4x baterie (2x originální baterie Canon Li-ion , 2x neoriginální baterie), sluneční clona JJC lens hood for 60C, paměťová karta 2GB, objektiv EFS 18-55mm.</p>
                                 </div>
                             </div>
-                        </a>     
+                        </a>
                     </div>    
                     <div class="line">
                         <a href="post.html" class="linked-post">
@@ -175,7 +177,7 @@
                                     <p>Prodám plně funkční Canon 400D + příslušenství. 4x baterie (2x originální baterie Canon Li-ion , 2x neoriginální baterie), sluneční clona JJC lens hood for 60C, paměťová karta 2GB, objektiv EFS 18-55mm.</p>
                                 </div>
                             </div>
-                        </a>     
+                        </a>
                     </div>    
                     <div class="line">
                         <a href="post.html" class="linked-post">
@@ -228,8 +230,8 @@
                                     <p>Prodám plně funkční Canon 400D + příslušenství. 4x baterie (2x originální baterie Canon Li-ion , 2x neoriginální baterie), sluneční clona JJC lens hood for 60C, paměťová karta 2GB, objektiv EFS 18-55mm.</p>
                                 </div>
                             </div>
-                        </a>     
-                    </div> 
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -241,6 +243,7 @@
                 </div>
             </footer>
         </div>
+        <script src="script/category.js"></script>
     </div>
 </body>
 </html>
