--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,9 +11,11 @@
     <div class="main-container">
         <div class="header">
             <nav class="nav">
-                <div class="logo">
-                    <h1>Meow-itel</h1>
-                </div>
+                <a href="index.html">
+                    <div class="logo">
+                        <h1>Meow-itel</h1>
+                    </div>
+                </a>
                 <div>
                     <ul class="nav-links">
                         <li>
